frontend/test/should_pass/visitedinfilter.grg
#using "model.gm"

rule r(start:Node)
{
	start --> n:Node;
	
	modify {
		delete(n);
	}
}

filter rf<r>
{
	if(this[0].start.visited[0]) {
		this.add(clone(this.peek()));
		this.rem();
	}
}
