frontend/test/should_fail/matchclassimplements_003.grg
#using "matchclassmodel.gm"

rule r(start:Node) implements shared
{
	start --> n:Node;
	if{ !n.visited; }
	
	def -x:Edge->; // edge-node mismatch

	modify {
		delete(n);
	}
}

match class shared
{
	def x:Node;
}
